--- a/style.css
+++ b/style.css
@@ -99,45 +99,110 @@ button:hover {
     text-align: center;
 }
 
-#Featured {
+.img {
 
-    padding: 100px 0;
-}
-
-.section-content {
-
-    position: relative;
     display: flex;
+    max-width: 1440px;
     justify-content: space-evenly;
-    align-items: end;
-    gap: 20px;
+    margin-top: 100px;
 }
 
-.flower-a {
+.img-1 {
+
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
+    width: 450px;
+    text-align: center;
 }
 
-.flower-b {
+.img-2 {
+
     border-radius: 300px 300px 0px 0px;
     background: rgba(5, 151, 160, 0.15);
+    width: 450px;
+    text-align: center;
 }
 
-.flower-c {
+.img-3 {
+
     border-radius: 300px 300px 0px 0px;
     background: rgba(71, 125, 17, 0.15);
+    width: 450px;
+    text-align: center;
 }
 
-.section-content p{
- 
-color: rgb(39, 39, 39);
-font-family: Lato;
-font-size: 24px;
-font-weight: 700;
-line-height: 35px;
-letter-spacing: 0%;
-text-align: center;
-text-decoration-line: underline;
+.img-text {
+    display: flex;
+    justify-content: space-evenly;
+    text-decoration: underline;
+    margin-top: 30px;
 
 }
 
+.text-1 {
+
+    padding-right: 180px;
+}
+
+
+.text-2 {
+
+    padding-right: 150px;
+}
+
+.text-3 {
+    padding-left: 20px;
+}
+
+.text-1 p {
+
+    color: rgb(39, 39, 39);
+    font-family: Lato;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.text-2 p {
+
+    color: rgb(39, 39, 39);
+    font-family: Lato;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.text-3 p {
+
+    color: rgb(39, 39, 39);
+    font-family: Lato;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.help-img {
+
+    display: flex;
+    max-width: 1400px;
+    justify-content: space-evenly;
+    margin-top: 100px;
+    border-radius: 8px;
+    background: rgba(39, 39, 39, 0.05);
+    height: 340px;
+    align-items: center;
+
+}
+
+.help-container {
+    text-align: center;
+    margin-left: 250px;
+}
+
+.help-img-1 p{
+
+    color: rgba(39, 39, 39, 0.8);
+    font-family: Lato;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 35px;
+    letter-spacing: 0%;
+    text-align: center;
+}
