--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ p {
 
     margin-bottom: 32px;
     max-width: 600px;
-   
+
 }
 
 button {
@@ -275,21 +275,104 @@ button:hover {
     background-color: rgb(199, 28, 65);
 }
 
-.deal-img{
+.deal-img {
 
     margin-right: 150px;
 }
 
 .insta-image {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);  /* Adjust the number of columns as needed */
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     max-width: 1440px;
-    justify-content: center;  /* Center the items horizontally */
-    margin: auto;  /* Center the container */
+    justify-content: center;
+    margin: auto;
 }
 
 
 .insta-image div {
-    text-align: center;  /* Center the content inside each grid item */
+    text-align: center;
+
+}
+
+.newsletter {
+    margin: 50px 0;
+}
+
+.newsletter-main {
+    background-image: url('images/Rectangle\ 9.png');
+    max-width: 1440px;
+    width: 100%;
+    height: 450px;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    /* Center the container horizontally */
+    border-radius: 8px;
+}
+
+.newsletter-heading {
+    color: rgb(39, 39, 39);
+    font-family: 'Lato', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 48px;
+    text-align: center;
+    padding-top: 100px;
+    margin-bottom: 20px;
+    color: rgb(39, 39, 39);
+    font-family: Lato;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 48px;
+    letter-spacing: 0%;
+    text-align: center;
+    /* Add margin-bottom to create a gap between heading and input */
+
+}
+
+.newsletter-heading p {
+    color: rgba(39, 39, 39, 0.6);
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+    margin-top: 10px;
+
+}
+
+.input {
+    display: flex;
+    justify-content: center;
+    /* Center the form horizontally */
+    align-items: center;
+    /* Center items vertically */
+    margin-left: 300px;
+    /* Left margin of 300px */
+    margin-right: 300px;
+    /* Right margin of 300px */
+
+}
+
+.input input {
+    width: 500px;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    padding-left: 10px;
+    margin-right: 5px;
+    /* Adjust the right margin to create a gap */
+    margin-top: 20px;
+}
+
+.input .btn-2 {
+    border-radius: 8px;
+    background-color: rgb(229, 84, 115);
+    padding: 8px;
+    margin-left: 10px;
+    margin-top: 20px;
+}
+
+.btn-2 p{
+     color: white;
 }
