--- a/style.css
+++ b/style.css
@@ -363,6 +363,7 @@ button:hover {
     margin-right: 5px;
     /* Adjust the right margin to create a gap */
     margin-top: 20px;
+    outline: none;
 }
 
 .input .btn-2 {
@@ -375,4 +376,29 @@ button:hover {
 
 .btn-2 p{
      color: white;
+}
+
+
+.footer-last {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 100px auto; 
+    padding: 70px; 
+    background: rgb(17, 16, 16);;
+}
+
+.footer-last h2 {
+    margin-bottom: 10px; 
+    font-family: Lato;
+    color: rgba(255, 255, 255, 0.9);
+}
+
+.footer-last p {
+    margin: 0;
+    width: 700px; 
+    text-align: center;
+    color: rgba(255, 255, 255, 0.9);;
 }
