--- a/style.css
+++ b/style.css
@@ -380,13 +380,14 @@ button:hover {
 
 
 .footer-last {
-    max-width: 100%;
+    max-width: 1922px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 100px auto; 
-    padding: 70px; 
+    margin: 0;
+    padding-top: 200px ;
     background: rgb(17, 16, 16);;
 }
 
